Fixed image spacing on Info page.

--- a/css/style.css
+++ b/css/style.css
@@ -488,8 +488,8 @@ iframe {
   float: right;
   height: 200px;
   width: 400px;
-  margin-left: 20px;
-  margin-right: 5px;
+  margin-left: 50px;
+  margin-right: 100px;
 }
 
 #Table_01 {
